# ElektroSim

./: .anjuta_sym_db.db  .gitignore  CMakeLists.txt  Line.vala  Makefile  Makefile.in  NGSpiceSimulator.vala  README.md  XYGraph.vala  aclocal.m4  component.vala  componentlist.vala  config.h  config.status  configure  configure.ac  elektroSim  elektrosim.avprj  elektrosim.vala  elektrosim.vlp  ground.vala  libtool  makefile  netlist.txt  ngspice.h  ngspice.vapi  parameter.vala  point.vala  power-source.vala  resistor.vala  sharedspice.vapi  simulation.vala  simulationArea.vala  test.txt
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status
autom4te.cache/: output.0  requests  traces.0  traces.1
cmake/: project.cmake
doc/: CMakeLists.txt
po/: CMakeLists.txt  POTFILES.in
server/: CMakeLists.txt  Server  index.php  makefile  server.vala
src/: .anjuta_sym_db.db  CMakeLists.txt  Line.vala  Makefile  Makefile.am  Makefile.am~  Makefile.in  NGSpiceSimulator.c  NGSpiceSimulator.vala  XYGraph.c  XYGraph.vala  capicitor.c  capicitor.vala  component.c  component.vala  component.vala~  componentlist.c  componentlist.vala  elektronsim  elektronsim.c  elektronsim.vala  elektronsim.vala~  elektrosim.c  elektrosim.vala  elektrosim.vala~  ground.c  ground.vala  ground.vala~  inductor.c  inductor.vala  netlist-generator.c  netlist-generator.vala  netlist-generator.vala~  parameter.c  parameter.vala  point.vala  power-source.c  power-source.vala  power-source.vala~  resistor.c  (+8 more)
src/.anjuta/session/: anjuta.session  dock-layout.xml
src/.deps/: component.Po  elektronsim.Po  simulationArea.Po
(+11 files in other folders)
